--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,5 +1,4 @@
 .homepage{
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,4 +20,25 @@
 
 .description{
     color: rgba(255, 255, 255, 0.694);
+}
+
+.bookmark{
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+.bookmark_head{
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+.loading_screen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-size: 2rem;
+    color: white;
+    font-weight: 900;
 }
