--- a/src/components/Register_popup.module.css
+++ b/src/components/Register_popup.module.css
@@ -131,12 +131,17 @@ footer {
     color: var(--md-sys-color-on-surface-variant);
 }
 
-.signin_link {
-    color: var(--md-sys-color-primary);
-    text-decoration: none;
+.signin {
+    background: none;
+    border: none;
+    padding: 0;
+
+    font-size: 0.9rem;
     font-weight: 600;
+
+    cursor: pointer;
 }
 
-.signin_link:hover {
-    text-decoration: underline;
-}
+
+
+
